pkg/core/generated/neuroscript_parser.go
// Code generated from NeuroScript.g4 by ANTLR 4.13.2. DO NOT EDIT.

package core // NeuroScript
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type NeuroScriptParser struct {
	*antlr.BaseParser
}

var NeuroScriptParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func neuroscriptParserInit() {
	staticData := &NeuroScriptParserStaticData
	staticData.LiteralNames = []string{
		"", "'SPLAT'", "'PROCEDURE'", "'END'", "'ENDBLOCK'", "'COMMENT:'", "'ENDCOMMENT'",
		"'SET'", "'CALL'", "'RETURN'", "'IF'", "'THEN'", "'ELSE'", "'WHILE'",
		"'DO'", "'FOR'", "'EACH'", "'IN'", "'TOOL'", "'LLM'", "'__last_call_result'",
		"'EMIT'", "", "", "", "'='", "'+'", "'('", "')'", "','", "'['", "']'",
		"'{'", "'}'", "':'", "'.'", "'/'", "'{{'", "'}}'", "'=='", "'!='", "'>'",
		"'<'", "'>='", "'<='",
	}
	staticData.SymbolicNames = []string{
		"", "KW_STARTPROC", "KW_PROCEDURE", "KW_END", "KW_ENDBLOCK", "KW_COMMENT_START",
		"KW_ENDCOMMENT", "KW_SET", "KW_CALL", "KW_RETURN", "KW_IF", "KW_THEN",
		"KW_ELSE", "KW_WHILE", "KW_DO", "KW_FOR", "KW_EACH", "KW_IN", "KW_TOOL",
		"KW_LLM", "KW_LAST_CALL_RESULT", "KW_EMIT", "COMMENT_BLOCK", "NUMBER_LIT",
		"STRING_LIT", "ASSIGN", "PLUS", "LPAREN", "RPAREN", "COMMA", "LBRACK",
		"RBRACK", "LBRACE", "RBRACE", "COLON", "DOT", "SLASH", "PLACEHOLDER_START",
		"PLACEHOLDER_END", "EQ", "NEQ", "GT", "LT", "GTE", "LTE", "IDENTIFIER",
		"LINE_COMMENT", "NEWLINE", "WS",
	}
	staticData.RuleNames = []string{
		"program", "optional_newlines", "procedure_definition", "param_list_opt",
		"param_list", "statement_list", "body_line", "statement", "simple_statement",
		"block_statement", "set_statement", "call_statement", "return_statement",
		"emit_statement", "if_statement", "while_statement", "for_each_statement",
		"call_target", "condition", "expression", "term", "primary", "placeholder",
		"literal", "list_literal", "map_literal", "expression_list_opt", "expression_list",
		"map_entry_list_opt", "map_entry_list", "map_entry",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// NeuroScriptParserInit initializes any static state used to implement NeuroScriptParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewNeuroScriptParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func NeuroScriptParserInit() {
	staticData := &NeuroScriptParserStaticData
	staticData.once.Do(neuroscriptParserInit)
}

// NewNeuroScriptParser produces a new parser instance for the optional input antlr.TokenStream.
func NewNeuroScriptParser(input antlr.TokenStream) *NeuroScriptParser {
	NeuroScriptParserInit()
	this := new(NeuroScriptParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &NeuroScriptParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "NeuroScript.g4"

	return this
}

// NeuroScriptParser tokens.
const (
	NeuroScriptParserEOF                 = antlr.TokenEOF
	NeuroScriptParserKW_STARTPROC        = 1
	NeuroScriptParserKW_PROCEDURE        = 2
	NeuroScriptParserKW_END              = 3
	NeuroScriptParserKW_ENDBLOCK         = 4
	NeuroScriptParserKW_COMMENT_START    = 5
	NeuroScriptParserKW_ENDCOMMENT       = 6
	NeuroScriptParserKW_SET              = 7
	NeuroScriptParserKW_CALL             = 8
	NeuroScriptParserKW_RETURN           = 9
	NeuroScriptParserKW_IF               = 10
	NeuroScriptParserKW_THEN             = 11
	NeuroScriptParserKW_ELSE             = 12
	NeuroScriptParserKW_WHILE            = 13
	NeuroScriptParserKW_DO               = 14
	NeuroScriptParserKW_FOR              = 15
	NeuroScriptParserKW_EACH             = 16
	NeuroScriptParserKW_IN               = 17
	NeuroScriptParserKW_TOOL             = 18
	NeuroScriptParserKW_LLM              = 19
	NeuroScriptParserKW_LAST_CALL_RESULT = 20
	NeuroScriptParserKW_EMIT             = 21
	NeuroScriptParserCOMMENT_BLOCK       = 22
	NeuroScriptParserNUMBER_LIT          = 23
	NeuroScriptParserSTRING_LIT          = 24
	NeuroScriptParserASSIGN              = 25
	NeuroScriptParserPLUS                = 26
	NeuroScriptParserLPAREN              = 27
	NeuroScriptParserRPAREN              = 28
	NeuroScriptParserCOMMA               = 29
	NeuroScriptParserLBRACK              = 30
	NeuroScriptParserRBRACK              = 31
	NeuroScriptParserLBRACE              = 32
	NeuroScriptParserRBRACE              = 33
	NeuroScriptParserCOLON               = 34
	NeuroScriptParserDOT                 = 35
	NeuroScriptParserSLASH               = 36
	NeuroScriptParserPLACEHOLDER_START   = 37
	NeuroScriptParserPLACEHOLDER_END     = 38
	NeuroScriptParserEQ                  = 39
	NeuroScriptParserNEQ                 = 40
	NeuroScriptParserGT                  = 41
	NeuroScriptParserLT                  = 42
	NeuroScriptParserGTE                 = 43
	NeuroScriptParserLTE                 = 44
	NeuroScriptParserIDENTIFIER          = 45
	NeuroScriptParserLINE_COMMENT        = 46
	NeuroScriptParserNEWLINE             = 47
	NeuroScriptParserWS                  = 48
)

// NeuroScriptParser rules.
const (
	NeuroScriptParserRULE_program              = 0
	NeuroScriptParserRULE_optional_newlines    = 1
	NeuroScriptParserRULE_procedure_definition = 2
	NeuroScriptParserRULE_param_list_opt       = 3
	NeuroScriptParserRULE_param_list           = 4
	NeuroScriptParserRULE_statement_list       = 5
	NeuroScriptParserRULE_body_line            = 6
	NeuroScriptParserRULE_statement            = 7
	NeuroScriptParserRULE_simple_statement     = 8
	NeuroScriptParserRULE_block_statement      = 9
	NeuroScriptParserRULE_set_statement        = 10
	NeuroScriptParserRULE_call_statement       = 11
	NeuroScriptParserRULE_return_statement     = 12
	NeuroScriptParserRULE_emit_statement       = 13
	NeuroScriptParserRULE_if_statement         = 14
	NeuroScriptParserRULE_while_statement      = 15
	NeuroScriptParserRULE_for_each_statement   = 16
	NeuroScriptParserRULE_call_target          = 17
	NeuroScriptParserRULE_condition            = 18
	NeuroScriptParserRULE_expression           = 19
	NeuroScriptParserRULE_term                 = 20
	NeuroScriptParserRULE_primary              = 21
	NeuroScriptParserRULE_placeholder          = 22
	NeuroScriptParserRULE_literal              = 23
	NeuroScriptParserRULE_list_literal         = 24
	NeuroScriptParserRULE_map_literal          = 25
	NeuroScriptParserRULE_expression_list_opt  = 26
	NeuroScriptParserRULE_expression_list      = 27
	NeuroScriptParserRULE_map_entry_list_opt   = 28
	NeuroScriptParserRULE_map_entry_list       = 29
	NeuroScriptParserRULE_map_entry            = 30
)

// IProgramContext is an interface to support dynamic dispatch.
type IProgramContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllOptional_newlines() []IOptional_newlinesContext
	Optional_newlines(i int) IOptional_newlinesContext
	EOF() antlr.TerminalNode
	AllProcedure_definition() []IProcedure_definitionContext
	Procedure_definition(i int) IProcedure_definitionContext

	// IsProgramContext differentiates from other interfaces.
	IsProgramContext()
}

type ProgramContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgramContext() *ProgramContext {
	var p = new(ProgramContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = NeuroScriptParserRULE_program
	return p
}

func InitEmptyProgramContext(p *ProgramContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = NeuroScriptParserRULE_program
}

func (*ProgramContext) IsProgramContext() {}

func NewProgramContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgramContext {
	var p = new(ProgramContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = NeuroScriptParserRULE_program

	return p
}

func (s *ProgramContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgramContext) AllOptional_newlines() []IOptional_newlinesContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IOptional_newlinesContext); ok {
			len++
		}
	}

	tst := make([]IOptional_newlinesContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IOptional_newlinesContext); ok {
			tst[i] = t.(IOptional_newlinesContext)
			i++
		}
	}

	return tst
}

func (s *ProgramContext) Optional_newlines(i int) IOptional_newlinesContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IOptional_newlinesContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IOptional_newlinesContext)
}

func (s *ProgramContext) EOF() antlr.TerminalNode {
	return s.GetToken(NeuroScriptParserEOF, 0)
}

func (s *ProgramContext) AllProcedure_definition() []IProcedure_definitionContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IProcedure_definitionContext); ok {
			len++
		}
	}

	tst := make([]IProcedure_definitionContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IProcedure_definitionContext); ok {
			tst[i] = t.(IProcedure_definitionContext)
			i++
		}
	}

	return tst
}

func (s *ProgramContext) Procedure_definition(i int) IProcedure_definitionContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IProcedure_definitionContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IProcedure_definitionContext)
}

func (s *ProgramContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgramContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProgramContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(NeuroScriptListener); ok {
		listenerT.EnterProgram(s)
	}
}

func (s *ProgramContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(NeuroScriptListener); ok {
		listenerT.ExitProgram(s)
	}
}

func (s *ProgramContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case NeuroScriptVisitor:
		return t.VisitProgram(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *NeuroScriptParser) Program() (localctx IProgramContext) {
	localctx = NewProgramContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, NeuroScriptParserRULE_program)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(62)
		p.Optional_newlines()
	}
	p.SetState(66)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for _la == NeuroScriptParserKW_STARTPROC {
		{
			p.SetState(63)
			p.Procedure_definition()
		}

		p.SetState(68)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(69)
		p.Optional_newlines()
	}
	{
		p.SetState(70)
		p.Match(NeuroScriptParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IOptional_newlinesContext is an interface to support dynamic dispatch.
type IOptional_newlinesContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllNEWLINE() []antlr.TerminalNode
	NEWLINE(i int) antlr.TerminalNode

	// IsOptional_newlinesContext differentiates from other interfaces.
	IsOptional_newlinesContext()
}

type Optional_newlinesContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyOptional_newlinesContext() *Optional_newlinesContext {
	var p = new(Optional_newlinesContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = NeuroScriptParserRULE_optional_newlines
	return p
}

func InitEmptyOptional_newlinesContext(p *Optional_newlinesContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = NeuroScriptParserRULE_optional_newlines
}

func (*Optional_newlinesContext) IsOptional_newlinesContext() {}

func NewOptional_newlinesContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Optional_newlinesContext {
	var p = new(Optional_newlinesContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = NeuroScriptParserRULE_optional_newlines

	return p
}

func (s *Optional_newlinesContext) GetParser() antlr.Parser { return s.parser }

func (s *Optional_newlinesContext) AllNEWLINE() []antlr.TerminalNode {
	return s.GetTokens(NeuroScriptParserNEWLINE)
}

func (s *Optional_newlinesContext) NEWLINE(i int) antlr.TerminalNode {
	return s.GetToken(NeuroScriptParserNEWLINE, i)
}

func (s *Optional_newlinesContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Optional_newlinesContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Optional_newlinesContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(NeuroScriptListener); ok {
		listenerT.EnterOptional_newlines(s)
	}
}

func (s *Optional_newlinesContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(NeuroScriptListener); ok {
		listenerT.ExitOptional_newlines(s)
	}
}

func (s *Optional_newlinesContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case NeuroScriptVisitor:
		return t.VisitOptional_newlines(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *NeuroScriptParser) Optional_newlines() (localctx IOptional_newlinesContext) {
	localctx = NewOptional_newlinesContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, NeuroScriptParserRULE_optional_newlines)
	var _alt int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(75)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_alt = p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 1, p.GetParserRuleContext())
	if p.HasError() {
		goto errorExit
	}
	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			{
				p.SetState(72)
				p.Match(NeuroScriptParserNEWLINE)
				if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
				}
			}

		}
		p.SetState(77)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_alt = p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 1, p.GetParserRuleContext())
		if p.HasError() {
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IProcedure_definitionContext is an interface to support dynamic dispatch.
type IProcedure_definitionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	KW_STARTPROC() antlr.TerminalNode
	KW_PROCEDURE() antlr.TerminalNode
	IDENTIFIER() antlr.TerminalNode
	LPAREN() antlr.TerminalNode
	Param_list_opt() IParam_list_optContext
	RPAREN() antlr.TerminalNode
	AllNEWLINE() []antlr.TerminalNode
	NEWLINE(i int) antlr.TerminalNode
	Statement_list() IStatement_listContext
	KW_END() antlr.TerminalNode
	COMMENT_BLOCK() antlr.TerminalNode

	// IsProcedure_definitionContext differentiates from other interfaces.
	IsProcedure_definitionContext()
}

type Procedure_definitionContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProcedure_definitionContext() *Procedure_definitionContext {
	var p = new(Procedure_definitionContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = NeuroScriptParserRULE_procedure_definition
	return p
}

func InitEmptyProcedure_definitionContext(p *Procedure_definitionContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = NeuroScriptParserRULE_procedure_definition
}

func (*Procedure_definitionContext) IsProcedure_definitionContext() {}

func NewProcedure_definitionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Procedure_definitionContext {
	var p = new(Procedure_definitionContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = NeuroScriptParserRULE_procedure_definition

	return p
}

func (s *Procedure_definitionContext) GetParser() antlr.Parser { return s.parser }

func (s *Procedure_definitionContext) KW_STARTPROC() antlr.TerminalNode {
	return s.GetToken(NeuroScriptParserKW_STARTPROC, 0)
}

func (s *Procedure_definitionContext) KW_PROCEDURE() antlr.TerminalNode {
	return s.GetToken(NeuroScriptParserKW_PROCEDURE, 0)
}

func (s *Procedure_definitionContext) IDENTIFIER() antlr.TerminalNode {
	return s.GetToken(NeuroScriptParserIDENTIFIER, 0)
}

func (s *Procedure_definitionContext) LPAREN() antlr.TerminalNode {
	return s.GetToken(NeuroScriptParserLPAREN, 0)
}

func (s *Procedure_definitionContext) Param_list_opt() IParam_list_optContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IParam_list_optContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IParam_list_optContext)
}

func (s *Procedure_definitionContext) RPAREN() antlr.TerminalNode {
	return s.GetToken(NeuroScriptParserRPAREN, 0)
}

func (s *Procedure_definitionContext) AllNEWLINE() []antlr.TerminalNode {
	return s.GetTokens(NeuroScriptParserNEWLINE)
}

func (s *Procedure_definitionContext) NEWLINE(i int) antlr.TerminalNode {
	return s.GetToken(NeuroScriptParserNEWLINE, i)
}

func (s *Procedure_definitionContext) Statement_list() IStatement_listContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStatement_listContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStatement_listContext)
}

func (s *Procedure_definitionContext) KW_END() antlr.TerminalNode {
	return s.GetToken(NeuroScriptParserKW_END, 0)
}

func (s *Procedure_definitionContext) COMMENT_BLOCK() antlr.TerminalNode {
	return s.GetToken(NeuroScriptParserCOMMENT_BLOCK, 0)
}

func (s *Procedure_definitionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Procedure_definitionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Procedure_definitionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(NeuroScriptListener); ok {
		listenerT.EnterProcedure_definition(s)
	}
}

func (s *Procedure_definitionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(NeuroScriptListener); ok {
		listenerT.ExitProcedure_definition(s)
	}
}

func (s *Procedure_definitionContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case NeuroScriptVisitor:
		return t.VisitProcedure_definition(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *NeuroScriptParser) Procedure_definition() (localctx IProcedure_definitionContext) {
	localctx = NewProcedure_definitionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, NeuroScriptParserRULE_procedure_definition)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(78)
		p.Match(NeuroScriptParserKW_STARTPROC)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(79)
		p.Match(NeuroScriptParserKW_PROCEDURE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(80)
		p.Match(NeuroScriptParserIDENTIFIER)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(81)
		p.Match(NeuroScriptParserLPAREN)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(82)
		p.Param_list_opt()
	}
	{
		p.SetState(83)
		p.Match(NeuroScriptParserRPAREN)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(84)
		p.Match(NeuroScriptParserNEWLINE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(86)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == NeuroScriptParserCOMMENT_BLOCK {
		{
			p.SetState(85)
			p.Match(NeuroScriptParserCOMMENT_BLOCK)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	}
	{
		p.SetState(88)
		p.Statement_list()
	}
	{
		p.SetState(89)
		p.Match(NeuroScriptParserKW_END)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(91)
	p.GetErrorHandler().Sync(p)

	if p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 3, p.GetParserRuleContext()) == 1 {
		{
			p.SetState(90)
			p.Match(NeuroScriptParserNEWLINE)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	} else if p.HasError() { // JIM
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IParam_list_optContext is an interface to support dynamic dispatch.
type IParam_list_optContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Param_list() IParam_listContext

	// IsParam_list_optContext differentiates from other interfaces.
	IsParam_list_optContext()
}

type Param_list_optContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyParam_list_optContext() *Param_list_optContext {
	var p = new(Param_list_optContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = NeuroScriptParserRULE_param_list_opt
	return p
}

func InitEmptyParam_list_optContext(p *Param_list_optContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = NeuroScriptParserRULE_param_list_opt
}

func (*Param_list_optContext) IsParam_list_optContext() {}

func NewParam_list_optContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Param_list_optContext {
	var p = new(Param_list_optContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = NeuroScriptParserRULE_param_list_opt

	return p
}

func (s *Param_list_optContext) GetParser() antlr.Parser { return s.parser }

func (s *Param_list_optContext) Param_list() IParam_listContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IParam_listContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IParam_listContext)
}

func (s *Param_list_optContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Param_list_optContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Param_list_optContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(NeuroScriptListener); ok {
		listenerT.EnterParam_list_opt(s)
	}
}

func (s *Param_list_optContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(NeuroScriptListener); ok {
		listenerT.ExitParam_list_opt(s)
	}
}
